Add documentation xml and generate docs file.
