# Api/ChatCommunicator.Contracts/Dtos/Controllers/UserController/RegisterAsync/RegisteredDto.cs
@@ -5,7 +5,7 @@
         public required Guid Id { get; set; }
         public required string Email { get; set; }
         public required string Username { get; set; }
-        public required string ConfirmToken { get; set; }
+        public required string ConfirmToken { get; set; } // to remove, only for development
     }
 
 }
